fix the overflow problem.

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -209,7 +209,7 @@ a {
   font-weight: 600;
   margin: 1rem 0;
   outline: 0;
-  padding: 2rem 3rem;
+  padding: 2rem 4vw;
   text-align: center;
   text-transform: uppercase;
   white-space: nowrap;
@@ -300,6 +300,7 @@ a {
   border: 0;
   flex-grow: 1;
   padding: 1.5rem 2rem;
+  width: 0;
 }
 
 .input-group .btn {
@@ -346,7 +347,7 @@ a {
 /*  */
 /* plans */
 .plan {
-  transition: transfomr 0.2s ease-out;
+  transition: transform 0.2s ease-out;
 }
 
 .plan__name {
@@ -379,7 +380,7 @@ a {
 }
 
 .plan--popular {
-  transform: scale(1.1);
+  transform: scale(1.05);
 }
 
 .plan--popular .card__header {
@@ -400,7 +401,7 @@ a {
 }
 
 .plan--popular:hover {
-  transform: scale(1.15);
+  transform: scale(1.1);
 }
 
 @media screen and (min-width: 1024px) {
@@ -418,6 +419,14 @@ a {
 
   .plan__description {
     font-size: 1.7rem;
+  }
+
+  .plan--popular {
+    transform: scale(1.1);
+  }
+
+  .plan--popular:hover {
+    transform: scale(1.15);
   }
 }
 
@@ -544,8 +553,10 @@ a {
 /*  */
 /* Callouts */
 .callout {
+  margin: 4rem auto 0 auto;
   padding: 4rem;
   border-radius: 5px;
+  z-index: 90;
 }
 
 .callout--primary {
@@ -569,6 +580,14 @@ a {
 }
 
 @media screen and (min-width: 768px) {
+  .callout {
+    position: relative;
+    bottom: -4rem;
+    left: auto;
+    right: auto;
+    max-width: 1100px;
+  }
+
   .callout .grid--1x2 {
     grid-template-columns: 1fr auto;
   }
@@ -756,8 +775,9 @@ a {
 }
 
 .block-domain__prices {
+  color: var(--color-headings);
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(2, 6rem);
   font-size: 2rem;
   font-weight: 600;
@@ -782,7 +802,6 @@ a {
   max-width: 500px;
   margin: 0 auto;
 }
-
 /*  */
 /* Features Block */
 .feature {
@@ -800,7 +819,6 @@ a {
 .feature__image {
   width: 100%;
 }
-
 @media screen and (min-width: 768px) {
   .feature:nth-of-type(even) .feature__content {
     order: 2;
@@ -904,4 +922,11 @@ a {
   .footer__heding {
     font-size: 1.6rem;
   }
+}
+
+/*  */
+/* Animations */
+
+.animations-fixed {
+  overflow-x: hidden;
 }
